--- a/style.css
+++ b/style.css
@@ -33,3 +33,90 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.section {
+  width: calc(50% - 20px);
+  padding: 20px;
+  padding-bottom: 35px;
+  border-bottom: 1px solid rgb(106, 106, 207);
+}
+
+.section-item {
+  flex: 0 1 50%;
+}
+
+.section-item::before {
+  content: "";
+  display: inline-block;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath fill='black' d='M10 0L12 10L20 10L13 15L15 20L10 17L5 20L7 15L0 10L8 10Z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: contain;
+  left: 7px;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+}
+
+.section-profile {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  padding: 50px 30px 35px;
+  width: 100%;
+  border-bottom: 10px solid rgb(106, 106, 207);
+}
+
+.section-title-subtitle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.section-title {
+  position: relative;
+  padding: 0;
+  margin-bottom: 20px;
+  color: rgb(30, 27, 27);
+  font-size: 30px;
+  font-weight: 400;
+  letter-spacing: 7px;
+}
+
+.section-subtitle {
+  margin-top: 20px;
+  color: rgba(14, 8, 46, 0.738);
+  line-height: 50px;
+  font-weight: 350;
+  letter-spacing: 2px;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 12px;
+  list-style: none;
+  gap: 20px;
+}
+
+.nav-item {
+  color: white;
+  font-weight: 600;
+}
+
+.profile-photo {
+  width: 250px;
+  height: auto; 
+  border-radius: 50%;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
+}
